syntax = "proto3";

option csharp_namespace = "translateService.Services";
package translateService;
service GrpcCachedTranslator {
	rpc Translate(TranslateRequest) returns (TranslateResponse);
}

message TranslateRequest{
	string Langfrom = 1;
	string Langto = 2;
	repeated string Text = 3;
}

message TranslateResponse{
	string Lang = 1;
	repeated string Text = 2;
}
